--- a/taroco-rbac/src/main/resources/templates/index.vue.vm
+++ b/taroco-rbac/src/main/resources/templates/index.vue.vm
@@ -25,7 +25,7 @@
       stripe
       style="width: 100%">
       #foreach ($column in ${tableInfo.columnInfoList})
-      <el-table-column align="center" label="${column.attrName}" width="60">
+      <el-table-column align="center" label="${column.columnComment}" width="60">
         <template slot-scope="scope">
           <span>{{scope.row.${column.attrName}}}</span>
         </template>
